ya salio maso lo de producto

--- a/app/src/main/res/layout/activity_producto.xml
+++ b/app/src/main/res/layout/activity_producto.xml
@@ -73,21 +73,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView16"
                 tools:srcCompat="@tools:sample/avatars" />
 
-            <LinearLayout
-                android:id="@+id/productButtonLY"
-                android:layout_width="match_parent"
-                android:layout_height="400dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="8dp"
-                android:orientation="vertical"
-                app:layout_constraintEnd_toEndOf="@+id/imageProducto"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/imageProducto"
-                app:layout_constraintTop_toBottomOf="@+id/imageProducto">
-               
-            </LinearLayout>
-
             <TextView
                 android:id="@+id/linea14"
                 android:layout_width="0dp"
@@ -131,24 +116,27 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="68dp"
+                android:layout_marginEnd="8dp"
                 android:text="Consejos de Uso"
                 android:textColor="@color/principalBlue"
                 android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.48"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/productButtonLY" />
+                app:layout_constraintTop_toBottomOf="@+id/imageProducto" />
 
             <TextView
                 android:id="@+id/tvConsejosUso"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginEnd="16dp"
                 android:text="TextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView14" />
+                app:layout_constraintTop_toBottomOf="@+id/viewPagerProducto" />
 
             <TextView
                 android:id="@+id/textView16"
@@ -175,6 +163,16 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageProductoComplementario"
                 app:layout_constraintTop_toBottomOf="@+id/textView16" />
+
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/viewPagerProducto"
+                android:layout_width="0dp"
+                android:layout_height="400dp"
+                android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageProducto" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
