--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -62,20 +62,31 @@
                 app:layout_constraintTop_toTopOf="@+id/imageView18"
                 app:srcCompat="@drawable/ic_biodema_logo_3" />
 
+            <technolifestyle.com.imageslider.FlipperLayout
+                android:id="@+id/flipper"
+
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_marginTop="45dp"
+                app:layout_constraintTop_toBottomOf="@+id/imageView20"
+                tools:layout_editor_absoluteX="-31dp">
+
+
+            </technolifestyle.com.imageslider.FlipperLayout>
+
             <TextView
-                android:fontFamily="@font/sourcesanspro_bold"
                 android:id="@+id/textView15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="32dp"
-                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/sourcesanspro_bold"
                 android:text="Productos"
                 android:textColor="#334B68"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView20" />
+                app:layout_constraintTop_toBottomOf="@+id/flipper" />
 
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/viewPager"
