--- a/app/src/main/res/layout/activity_club.xml
+++ b/app/src/main/res/layout/activity_club.xml
@@ -110,18 +110,18 @@
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:background="#334D6B"
+
+
                 android:gravity="center"
-
-
                 android:orientation="horizontal"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linea19">
+                app:layout_constraintTop_toBottomOf="@+id/textView20">
 
 
                 <ImageButton
@@ -192,39 +192,41 @@
                 android:id="@+id/Orotxt"
                 android:layout_width="57dp"
                 android:layout_height="19dp"
-                android:layout_marginStart="25dp"
-
                 android:layout_marginTop="26dp"
+
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/sourcesanspro_bold"
                 android:text="Cupones"
                 android:textAlignment="center"
                 android:textColor="#334D6B"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/Platatxt"
-                app:layout_constraintTop_toTopOf="@+id/linearLayout" />
+                app:layout_constraintTop_toTopOf="@+id/linearLayout"
+                tools:layout_editor_absoluteX="214dp" />
 
             <TextView
                 android:id="@+id/Platatxt"
                 android:layout_width="67dp"
                 android:layout_height="16dp"
-                android:layout_marginStart="22dp"
+                android:layout_marginEnd="23dp"
 
 
+                android:fontFamily="@font/sourcesanspro_bold"
                 android:text="Beneficios"
                 android:textAlignment="center"
                 android:textColor="#334D6B"
-                android:textSize="13dp"
+                android:textSize="12.5dp"
                 app:layout_constraintBottom_toBottomOf="@+id/Orotxt"
-                app:layout_constraintStart_toEndOf="@+id/Broncetxt"
+                app:layout_constraintEnd_toStartOf="@+id/Orotxt"
                 app:layout_constraintTop_toTopOf="@+id/Orotxt" />
 
             <TextView
                 android:id="@+id/Platinotxt"
                 android:layout_width="49dp"
                 android:layout_height="16dp"
-
-
                 android:layout_marginStart="34dp"
+
+
+                android:fontFamily="@font/sourcesanspro_bold"
                 android:text="Niveles"
                 android:textAlignment="center"
                 android:textColor="#334D6B"
@@ -237,13 +239,15 @@
                 android:id="@+id/Broncetxt"
                 android:layout_width="61dp"
                 android:layout_height="17dp"
+                android:layout_marginEnd="23dp"
 
+                android:fontFamily="@font/sourcesanspro_bold"
                 android:text="Historial"
                 android:textAlignment="center"
                 android:textColor="#334D6B"
                 app:layout_constraintBottom_toBottomOf="@+id/Platatxt"
-                app:layout_constraintTop_toTopOf="@+id/Platatxt"
-                tools:layout_editor_absoluteX="41dp" />
+                app:layout_constraintEnd_toStartOf="@+id/Platatxt"
+                app:layout_constraintTop_toTopOf="@+id/Platatxt" />
 
 
             <TextView
@@ -346,6 +350,21 @@
                 app:layout_constraintStart_toStartOf="@+id/linea9"
                 app:layout_constraintTop_toBottomOf="@+id/linea9"
                 app:srcCompat="@drawable/ic_bcrecurso_1capas" />
+
+            <TextView
+                android:id="@+id/textView20"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/sourcesanspro_bold"
+                android:text="Beneficios por niveles"
+                android:textSize="20dp"
+                android:textColor="#334D6B"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linea19" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
