--- a/app/src/main/res/layout/activity_club.xml
+++ b/app/src/main/res/layout/activity_club.xml
@@ -50,7 +50,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
-                android:id="@+id/imageButton2"
+                android:id="@+id/btnBackto"
                 android:layout_width="91dp"
                 android:layout_height="83dp"
                 android:layout_marginStart="8dp"
@@ -251,6 +251,7 @@
 
 
             <TextView
+
                 android:id="@+id/SaldoBioCoins"
                 android:layout_width="140dp"
                 android:layout_height="40dp"
@@ -264,6 +265,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
             <TextView
+                android:fontFamily="@font/sourcesanspro_bold"
                 android:id="@+id/NombreNivel"
                 android:layout_width="106dp"
                 android:layout_height="32dp"
@@ -280,6 +282,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/Nivel" />
 
             <TextView
+                android:fontFamily="@font/sourcesanspro_bold"
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -316,6 +319,7 @@
                 app:srcCompat="@drawable/ic_bronceclub" />
 
             <TextView
+                android:fontFamily="@font/sourcesanspro_bold"
                 android:id="@+id/CantidadCoins"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -329,6 +333,7 @@
                 app:layout_constraintVertical_bias="1.0" />
 
             <TextView
+                android:fontFamily="@font/sourcesanspro_black"
                 android:id="@+id/DescNivel"
                 android:layout_width="203dp"
                 android:layout_height="39dp"
