--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -8,6 +8,7 @@
     tools:context=".activities.LogInActivity">
 
     <TextView
+        android:fontFamily="@font/sourcesanspro_bold"
         android:id="@+id/textViewSesion"
         android:layout_width="130dp"
         android:layout_height="27dp"
@@ -83,6 +84,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextContraseña" />
 
     <Button
+        android:fontFamily="@font/sourcesanspro_bold"
         android:id="@+id/buttonlogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -121,8 +123,9 @@
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="130dp"
         android:layout_height="25dp"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="1dp"
         android:background="#ffff"
+        android:fontFamily="@font/sourcesanspro_bold"
         android:text="Recuperala aqui"
         android:textColor="#334B68"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
@@ -131,11 +134,13 @@
 
     <Button
         android:id="@+id/btnRegistrarse"
+
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="93dp"
         android:layout_height="23dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="2dp"
         android:background="#ffff"
+        android:fontFamily="@font/sourcesanspro_bold"
         android:text="Registrate"
         android:textColor="#334B68"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
