--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -65,11 +65,14 @@
             <technolifestyle.com.imageslider.FlipperLayout
                 android:id="@+id/flipper"
 
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_width="350dp"
+                android:layout_height="500dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="45dp"
-                app:layout_constraintTop_toBottomOf="@+id/imageView20"
-                tools:layout_editor_absoluteX="-31dp">
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView20">
 
 
             </technolifestyle.com.imageslider.FlipperLayout>
@@ -79,12 +82,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="68dp"
                 android:fontFamily="@font/sourcesanspro_bold"
                 android:text="Productos"
                 android:textColor="#334B68"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.479"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/flipper" />
 
@@ -153,20 +157,22 @@
                 app:layout_constraintTop_toBottomOf="@+id/viewPagerActualidad"
                 android:visibility="gone"/>
 
-            <Button
+            <ImageButton
                 android:id="@+id/btnTwitter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
+                android:layout_width="61dp"
+                android:layout_height="49dp"
+                android:layout_marginTop="92dp"
+                android:background="@drawable/ic_twitter_logo"
                 app:layout_constraintEnd_toStartOf="@+id/btnFacebook"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editTextEnviarCorreo" />
 
-            <Button
+            <ImageButton
                 android:id="@+id/btnFacebook"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
+                android:layout_width="35dp"
+                android:layout_height="57dp"
+                android:layout_marginTop="88dp"
+                android:background="@drawable/ic_fb_logo"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/btnTwitter"
                 app:layout_constraintTop_toBottomOf="@+id/editTextEnviarCorreo" />
@@ -176,7 +182,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="42dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="32dp"
                 android:text="La biología al servicio de la dermatologia"
